# Tessy

./: .gitignore  Cargo.toml  README.md  example_with_inputs.yaml  tasks.yaml
.github/: dependabot.yml
.github/workflows/: pr-checks.yml  release.yml
src/: main.rs
src/application/: application.rs  application_impl.rs  config.rs  mod.rs  runtime_config.rs
src/application/data/: log_level.rs
src/cli/: cli.rs  mod.rs
src/config/: config.rs  mod.rs  task_registry.rs
src/executor/: dependency_graph.rs  executor.rs  executor_impl.rs  mod.rs
src/ext/: async_conversion.rs  best_effort_path_ext.rs  mod.rs  system_time_ext.rs
src/file_dependencies/: dependency_tracker.rs  file_fingerprint.rs  mod.rs
src/filesystem/: mod.rs  tree.rs
src/tasks/: base_task.rs  execute_task.rs  mod.rs  task.rs
