[package]
name = "tessy"
version = "0.1.0"
edition = "2024"

[dependencies]
saphyr = "0.0.6"
derive_more = { version = "2.0.1", features = ["full"] }
snafu = "0.8.9"
hashlink = "0.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
compio = { version = "0.15.0", features = [
    "macros",
    "process",
    "dispatcher",
    "io-compat",
] }
futures = "0.3.31"
futures-channel = "0.3.31"
clap = { version = "4.5.47", features = ["derive"] }
bincode = "2.0.1"
zstd = "0.13.3"
fasthash = "0.4.0"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.21.0"
ordered-float = "5.0.0"
